--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "apollo-server": "^2.0.0",
+    "config": "^2.0.1",
     "graphql": "^0.13.2",
     "mongoose": "^5.2.9"
   }
