--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
   "author": "ak1103dev <ak.apichan1103@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "sync-package-lock": "synp --source-file ./yarn.lock"
+    "sync-package-lock": "synp --source-file ./yarn.lock",
+    "lint": "eslint src",
+    "fix-lint": "eslint --fix src"
   },
   "dependencies": {
     "apollo-server": "^2.0.0",
     "config": "^2.0.1",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-prettier": "^2.6.2",
     "graphql": "^0.13.2",
-    "mongoose": "^5.2.9"
+    "mongoose": "^5.2.9",
+    "prettier": "^1.14.2"
+  },
+  "devDependencies": {
+    "eslint": "^5.4.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
